[package]
name = "bbq"
version = "0.1.0"
edition = "2021"
description = "This project is for file handling. It can add, delete, modify, and query."
author = "hshe <hshe@163.com>"
readme = "README.md"
repository = "https://github.com/hshe/bbq"
license = "MIT"
keywords = ["file", "log", "systemlog"]
categories = ["filesystem"]

[dependencies]

[lib]
